--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5493576420015858"
      crossorigin="anonymous"></script>
-    <title>Title</title>
+    <title>NasMas</title>
   </head>
   <body>
-    <p>This is a paragraph.</p>
+    <p>This is site with Google AdSense</p>
   </body>
 </html>
