--- a/index.html
+++ b/index.html
@@ -1,1 +1,20 @@
-<meta http-equiv="Refresh" content="2; url=https://m-anastasia.github.io/weather-forecast/">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./style.css">
+    <link rel="icon" href="./logo.png" type="image/x-icon">
+    <title>M-Anastasia</title>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5493576420015858"
+            crossorigin="anonymous"></script>
+</head>
+<body>
+<main>
+    <div>
+        <a href="https://m-anastasia.github.io/weather-forecast/">Weather Forecast</a>
+    </div>
+</main>
+</body>
+</html>
