--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta http-equiv="refresh" content="2; URL=https://m-anastasia.github.io/weather-forecast/" />
     <link rel="stylesheet" href="./style.css">
     <link rel="icon" href="./logo.png" type="image/x-icon">
     <title>M-Anastasia</title>
